# Google-Research-MCP

./: .gitignore  Cargo.toml  Dockerfile  PRODUCTION_DEPLOYMENT.md  README.md  build.rs  docker-compose.yml  package.json
assets/agents/: deep-research-agent.md
assets/skills/: cite-sources.md  competitive-analysis.md  deep-research.md  fact-check.md  find-docs.md  news-monitor.md
binary-release/: HTTP_SETUP.md  INSTALL.md  google-research-mcp.7z
src/: config.rs  config_file.rs  console.rs  crashlog.rs  diagnose.rs  error.rs  google-research.ts  google-search.ts  gui_install.rs  install.rs  lib.rs  main.rs  manifest.rs  research-mcp.deprecated.ts  research-mcp.old.ts.bak  research-mcp.ts  server.rs  server.ts  service.rs  tray.rs  types.ts
src/config/: environment.ts  server-config.ts
src/content/: extractor.rs  mod.rs  quality.rs
src/handlers/: content-handlers.ts  navigation-handlers.ts  search-handlers.ts  synthesis-handlers.ts
src/serpapi/: client.rs  types.rs
src/services/: browsing-session.service.ts  content-extractor.service.ts  enhanced-content-extractor.service.ts  multi-source-synthesizer.service.ts  navigation.service.ts  research-enhancer.service.ts
src/tools/: de.rs  enhanced-tool-definitions.ts  extract.rs  google_search.rs  mod.rs  research.rs  tool-definitions.ts
src/types/: enhanced-types.ts
src/utils/: health-check.ts  logger.ts  rate-limiter.ts
